tests/c_programs/conditional/valid/chained.c
int main(void) {
    // Right-associative chaining
    return 1 ? 2 : 3 ? 4 : 5;
}