tests/c_programs/conditional/invalid_parse/no_condition.c
int main(void) {
    // Missing condition - should fail
    return ? 42 : 0;
}